--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,17 @@
-#Canvas { 
-    border: 3px solid #73AD21;    
+#Canvas {
+    border: 3px solid grey;
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
     display: block;
-};
+}
 
+;
 #Chat {
     display: absolute;
     justify-content: right;
-    overflow: auto;    
+    overflow: auto;
     background-color: blue;
 }
 
@@ -18,4 +19,3 @@
     max-height: 200px;
     overflow: auto;
 }
-
