profile activate skin

--- a/front/src/component/profile/profile.scss
+++ b/front/src/component/profile/profile.scss
@@ -1,5 +1,7 @@
-.mySkins {
-    display: inline;
-    margin-right: 10em;
-    margin-left: 10em;
+.mySkins {    
+    width: 25em;
+}
+
+.skin-img {    
+    filter:  contrast(10%);
 }
