style how to play and adding button

--- a/front/src/screen/home/HowToPlay.scss
+++ b/front/src/screen/home/HowToPlay.scss
@@ -1,24 +1,41 @@
-body {
-    background: linear-gradient(#9b9b9b, #000000);    
-    background-attachment: fixed;
+.howtoplay {
+    
+    .tableMobs {
+        background-color: white !important;
+        font-family: dungeon !important;   
+        font-size: 1.5em !important;
+    
+    };
+
+    .but {
+        padding-top: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+        font-size: 1.5em;
+    };
+
+    .card {
+        margin-left: auto;
+        margin-right: auto; 
+        margin-top: 5em;  
+        margin-bottom: 2.5em;
+        font-family: dungeon !important;
+    };
+
+    .card-body {
+        padding: 0 !important; 
+        font-size: 1.2em;
+    }
+
+    .react-bs-table table td {
+        white-space: normal;
+        text-align: center !important;
+    };
+
+    .table thead th {
+        text-align: center !important;
+    }
+
 };
 
-.tableMobs {
-    background-color: white !important;
-    font-family: dungeon !important;   
-    font-size: 1.5em !important;
-   
-};
-
-.tableBoss {
-    padding-top: 30px;
-};
-
-.tableLoots{
-    padding-top: 30px;
-};
-
-.tableItems{
-    padding-top: 30px;
-};
 
