--- a/front/src/screen/home/MainPage.scss
+++ b/front/src/screen/home/MainPage.scss
@@ -67,6 +67,14 @@
     font-size: 8em !important;    
 }
 
+.mainPageDown {
+    font-family: dungeon !important;   
+    font-size: 3em !important;
+    left: 7px;
+    top: 90vh;  
+    position: fixed;
+}
+
 .bodyNext {   
     background: none;      
     background-color: black;
