adding ulti in the doc + player desc #45

--- a/front/src/screen/home/HowToPlay.scss
+++ b/front/src/screen/home/HowToPlay.scss
@@ -7,6 +7,14 @@
     
     };
 
+    .tablePlayer {
+        background-color: white !important;
+        font-family: dungeon !important;   
+        font-size: 1.5em !important
+    
+    };
+
+
     .but {
         padding-top: 10px;
         margin-left: 5px;
